--- a/index.html
+++ b/index.html
@@ -411,6 +411,9 @@
                 <button class="reset-btn" onclick="resetAll()">🔄 Reset All</button>
                 <button class="action-btn" onclick="copyToClipboard()">📋 Copy Cost</button>
                 <button class="action-btn" onclick="downloadPDF()">📥 Download PDF</button>
+                <button class="action-btn" onclick="saveToday()">💾 Save Today</button>
+                <button class="action-btn" onclick="exportToExcel()">📊 Export to Excel</button>
+
             </div>
         </div>
     </div>
