--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><script type='text/javascript' src='https://ppl-ai-code-interpreter-files.s3.amazonaws.com/rZVnWGXvhbcswtFDD7_clLD6LIAIvpZlIMJQQQnbVjuh4Ggyyn5ohokFNlJnuUVg38vAyu_ukaAP-fHc-osVYK2BqrramgiY7YfgjXBsu1HYVEanoNzyASvT7jo0fdHPEbszN4JH7f-f5RtmQAlwJwPEdIeI0YvpTF08VdJ_xI8VQztCwOMGqwinoDNkuVtIgUwUHKmoTDcjbckvJ0ZQqYpUFoVPdEOl8qIO_BTyO8GJuARTEV4Nttvy2kIk8bcZ_9yDtYZgpoZj0wxEGCyYSi9lSjd5tzqXsJ0Xi_NfM5Xa_nZW_CPT_fZzMCOQDWMFRXeJJV9RinXwghrVeCs-eSfd8-MxHiqAQtZsHESvrfNM8ys9-9bqlmHKLlu2a_2H3wSjh2m0DSz-46LTEc8WkpwTwB4TjF3WZ0S0iO7AtblVgHiYoED5eMvYQ9PauQO2qAT3Jv4UM0OmjbxLZ2dlLVLLke2mtHsWQ6lCArGuLwoMkrltvpq_dthVdrYWuB9cmbAF2zQtFAGg9BYoAZAmO6vBcqG6w846cvAWhxwmIpTZnjFOP9TEk_Mf-X_rQWHwEN07BR1x4waFnZbnkY-NdDAjDzYfaI6XxvkQfDyO6ZxiJ2LfSSIIxtWz6T8OF2NmMgYSv3LfTDGirzOOR2Gn5oys6eGa3u_GJMNa9qAk3-1RrlFE7XYXNxlSA-vtF7Nw174qFNmueAx2TLsditatseAXvgfgiYJK9xknABjCEXZZ_U_FeLW9ZaEHAwrO5LY7_7PuLptI0FZ_zKf_8crJoMjR7ZLkT1Eh6DnhfvvzYdynzasz1rentYJRxgP02dtFn6vHS34aYwm61F7QeX_huU2D-2POToDlOuXu6r5IRtlffp77TRVs64tlEx-jU_d15Y24K1A1OTDggp2NpRf86VuZRpfbXU9Wug5X3Bmer3CSDh3YGnO4FvhFEp5o85J4bBagLzVZvMNWt7Nh4fLyZfCkOk9wvPDPi8EYLGCs4U7NbZuCZzOnMCSrkNOP9CKyca3DTjJpD-tIvqzPDH-hEeNqsvn64njEsKZN61Ct9w9c5odfa8od2g-N7xYJu0-4NStws7oXVFUdYuM9fEhmPGXX-McW88DA06MTaQ7JjbtmLvVcaG_iebxIF-caVjtMoLDCZU_-w7YEdFoeloMFtMz772oaTWdjn73_31me8NsO51Jdob0g_RneLLslR2WQ6s0b9H6Iw3RQo09z2Rxj083NRJZxKW70NdSnec4cE_PAIGzf1DRq5wlCqZnigdkgFCKs82HA1Bu3MvQCKrUCiW_0PuZUzOqGZwP5eeATbuvmOyDW6CaZjaNuYXaD9O9mk4H7yfz_5EVA_PjriopK3nimj5sF7XnlD9-rui2GX7sjlV7LTHWmepcC4lZc6yl1JGVz_feF-eYN87_Pz1RbyTPOGcSPiOzo4VSrDCpnZ6xgyi0oanMFfeuCunn3rulx6vUWK8TNyREa-L9eMHPD3HWvUqNfTeur46Ibe_Qf-Q6P2A892ul59DGj3954mPw-mKPDF1v6As0yfTNREZ5vPEIoiYBGghnBCSRAzs1EAeAfp2vk743QM5aG1D4W9TH2a7XlfMVm4yRFYjWb5fWDNVIfJhBdBmom0xXsCwryYYI1HwBmwKBlV8PADL5K15IxAI6peD0-kr7js3vCZwMECB4cZJc54drB3-y1y3nFXaG4zxGgpd5D-3fb9wCIr7pF-r8rYTaeuF-XT1XFxIH-A3Dnc-8-sWEaO-ZRp64wqOkKYhow3Bcw7-TAPtMP24jiN7esU_myKhIbb8oOwnGT-MUDxnH7SRs9Vrll4mZmLJn8HvMBcg0RVF-Uaiz45I-j9RSJTbLddxTzNHv9HKyJtYfKlJS6ovllinsgDhgsW3pWQCovdR1S-0mjZ1a8OkdhQtCj_FUqnxCg9xCZmaiapqKDHJIF85UUtjsmnHIJLoIcTwtkK-Yqpz5CKJYCQ7Q7GlKy_yw2Ym1YFSD9wIBv-PKAetmyFySnmSnhZgvJWGN5UV-gajAvnGJGKCcLl-_A8uoTIG1ti9vAfxJEbSg_3Ub9mfF7FrGijhkC0Vk9L6zW88CXJ-TxIrIgZKXjsNnrYZG8nPvGmWjyql4C6XYMeG6snedzZrtDepQLo0isi-yl9mbXFRsyuwAZtLlfZJG3SU01R3TSgeTcULAQ19tUMfsqzXZNSvB8XIpLHyztNtPw_H91o6OZUwMsK2ZWS0IpyNdocaNgGqtNl8fvRc0twYAf6Y_dPcrKNk3Jdhc3x-Jp-x7CqpyfrQeWCNnYHrHKnxtgzXBKFn6ZJUrUtfJjNvB4kIHnliIC5_1hf5YUZ76CueqOXn6jF_Pz38q9AU2fztDGWfKTXL4JX-Q1Km1-HWcxQxICdKTw_XvOTGp7DF--uNfENOJpMwh48mR_faz_7J9PeiMtWquMbSEjtjK7AJuEr-BdHtcsAAlb2ibshPnaTKx4M6m1k2uAS7Lp8aIQ_oUQxdz8EwvHtzamiI-NMwkAABvZtT3o21HJI7GbfKkh3JQmTcTxFnI0Lx04o_NY5wxaZivN_cbgSEbvBoxknwJGT8FlwnfQ3q9Z1lPug75DtYHIILP32WN26uRzzv7em3nQW43MZLUHCkNfn6kLeBtKdQiG9MQifIPUrhOR3khaWOKEAH7ZI2UyUKa15UYDQw8vXNNWubyNGO6UX-BeMDrmzif0cY-himNB6O2kRDXVvRA56xHd-g'></script>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="theme-color" content="#38bdf8">
@@ -413,12 +413,14 @@
                 <button class="action-btn" onclick="downloadPDF()">📥 Download PDF</button>
                 <button class="action-btn" onclick="saveToday()">💾 Save Today</button>
                 <button class="action-btn" onclick="exportToExcel()">📊 Export to Excel</button>
-
             </div>
         </div>
     </div>
 
+    <!-- Excel library + HTML2PDF -->
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
     <script>
         // Default template - 3 empty materials per machine
         const defaultMachine1 = [
@@ -436,6 +438,8 @@
         // Data storage
         let machine1 = JSON.parse(JSON.stringify(defaultMachine1));
         let machine2 = JSON.parse(JSON.stringify(defaultMachine2));
+        // Daily log storage (multiple entries with time)
+        let dailyLog = [];
 
         function renderRows(machineId) {
             const container = document.getElementById(`${machineId}-rows`);
@@ -513,6 +517,63 @@
             saveToLocalStorage();
         }
 
+        function saveToday() {
+            // Use the latest calculated values from the UI
+            const m1Total = parseFloat(document.getElementById('m1-total').textContent) || 0;
+            const m1CostPerKg = parseFloat(document.getElementById('m1-cost-per-kg').textContent) || 0;
+            const m2Total = parseFloat(document.getElementById('m2-total').textContent) || 0;
+            const m2CostPerKg = parseFloat(document.getElementById('m2-cost-per-kg').textContent) || 0;
+            const finalCost = parseFloat(document.getElementById('final-cost').textContent) || 0;
+
+            const now = new Date();
+            const date = now.toISOString().split('T')[0]; // YYYY-MM-DD
+            const time = now.toLocaleTimeString();        // Local time
+
+            const entry = {
+                date,
+                time,
+                m1Total,
+                m1CostPerKg,
+                m2Total,
+                m2CostPerKg,
+                finalCost
+            };
+
+            dailyLog.push(entry);
+            saveToLocalStorage();
+
+            showToast(`✅ Saved entry for ${date} at ${time}`);
+        }
+
+        function exportToExcel() {
+            if (!dailyLog.length) {
+                showToast('No entries to export yet');
+                return;
+            }
+
+            const worksheetData = [
+                ['Date', 'Time', 'M1 Total Cost', 'M1 Cost/kg', 'M2 Total Cost', 'M2 Cost/kg', 'Final Blended Cost'],
+                ...dailyLog.map(row => [
+                    row.date,
+                    row.time,
+                    row.m1Total,
+                    row.m1CostPerKg,
+                    row.m2Total,
+                    row.m2CostPerKg,
+                    row.finalCost
+                ])
+            ];
+
+            const worksheet = XLSX.utils.aoa_to_sheet(worksheetData);
+            const workbook = XLSX.utils.book_new();
+            XLSX.utils.book_append_sheet(workbook, worksheet, 'Daily Log');
+
+            const now = new Date();
+            const date = now.toISOString().split('T')[0];
+
+            XLSX.writeFile(workbook, `Cost_Calculator_Daily_Log_${date}.xlsx`);
+        }
+
         function resetAll() {
             machine1 = JSON.parse(JSON.stringify(defaultMachine1));
             machine2 = JSON.parse(JSON.stringify(defaultMachine2));
@@ -531,7 +592,8 @@
                         machine1: machine1,
                         machine2: machine2,
                         ratio1: document.getElementById('ratio1').value,
-                        ratio2: document.getElementById('ratio2').value
+                        ratio2: document.getElementById('ratio2').value,
+                        dailyLog: dailyLog
                     }));
                 }
             } catch (e) {
@@ -550,6 +612,7 @@
                             machine2 = data.machine2 || machine2;
                             document.getElementById('ratio1').value = data.ratio1 || 5.5;
                             document.getElementById('ratio2').value = data.ratio2 || 1;
+                            dailyLog = data.dailyLog || [];
                         } catch (e) {
                             console.log('Could not load saved data');
                         }
@@ -591,7 +654,7 @@
             }, 3000);
         }
 
-        // Initialize PWA
+        // Install prompt
         window.addEventListener('beforeinstallprompt', (e) => {
             e.preventDefault();
             let deferredPrompt = e;
@@ -617,7 +680,7 @@
             showToast('🎉 App installed successfully!');
         });
 
-        // Initialize PWA
+        // Initialize
         loadFromLocalStorage();
         renderRows('machine1');
         renderRows('machine2');
