--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Cost Price Calculator - Material Blending</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <style>
         :root {
             --bg-dark: #0f172a;
@@ -11,6 +12,7 @@
             --border: #334155;
             --primary: #38bdf8;
             --success: #10b981;
+            --excel-blue: #1d6f42;
             --text-main: #f1f5f9;
             --text-dim: #94a3b8;
         }
@@ -120,7 +122,7 @@
         .toolbar {
             display: flex;
             flex-wrap: wrap;
-            gap: 15px;
+            gap: 12px;
             justify-content: center;
             margin-top: 40px;
             padding: 20px;
@@ -128,7 +130,7 @@
         }
 
         .btn-tool {
-            padding: 12px 24px;
+            padding: 12px 20px;
             border-radius: 8px;
             border: none;
             cursor: pointer;
@@ -136,18 +138,15 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            font-size: 1rem;
+            font-size: 0.9rem;
             transition: transform 0.1s;
         }
 
         .btn-tool:active { transform: scale(0.95); }
 
         .btn-primary { background: var(--primary); color: #000; }
-        .btn-success { 
-            background: var(--success); 
-            color: #fff; 
-            box-shadow: 0 0 15px rgba(16, 185, 129, 0.3);
-        }
+        .btn-success { background: var(--success); color: #fff; }
+        .btn-excel { background: var(--excel-blue); color: #fff; }
         .btn-ghost { background: transparent; color: var(--text-dim); border: 1px solid var(--border); }
     </style>
 </head>
@@ -191,11 +190,11 @@
             <div style="display: flex; gap: 20px;">
                 <div style="flex: 1">
                     <label style="font-size: 0.8rem;">Machine 1 Parts</label>
-                    <input type="number" step="0.1" id="r1" value="0.0" oninput="calculate()">
+                    <input type="number" step="0.1" id="r1" value="5" oninput="calculate()">
                 </div>
                 <div style="flex: 1">
                     <label style="font-size: 0.8rem;">Machine 2 Parts</label>
-                    <input type="number" step="0.1" id="r2" value="0.0" oninput="calculate()">
+                    <input type="number" step="0.1" id="r2" value="1" oninput="calculate()">
                 </div>
             </div>
         </div>
@@ -208,13 +207,14 @@
 
     <div class="toolbar">
         <button class="btn-tool btn-ghost" onclick="resetAll()">🔄 Reset All</button>
+        <button class="btn-tool btn-excel" onclick="exportToExcel()">📊 Export Excel</button>
         <button class="btn-tool btn-success" onclick="saveToGoogleForm()">💾 SAVE TODAY</button>
         <button class="btn-tool btn-primary" onclick="window.print()">📥 Download PDF</button>
     </div>
 </div>
 
 <script>
-    // STARTING WITH ZEROS
+    // STARTING WITH ZEROS (5:1 Ratio set in HTML)
     const defaultData = {
         m1: [{ name: '', qty: 0, price: 0 }],
         m2: [{ name: '', qty: 0, price: 0 }]
@@ -281,6 +281,43 @@
         document.getElementById('final-price').innerText = `₹${final.toFixed(2)}`;
     }
 
+    function exportToExcel() {
+        const reportData = [];
+        
+        // Header
+        reportData.push(["Cost Calculation Report", new Date().toLocaleString()]);
+        reportData.push([]);
+
+        // Machine 1
+        reportData.push(["MACHINE 1 MATERIALS"]);
+        reportData.push(["Material", "Quantity (kg)", "Rate (₹)", "Subtotal"]);
+        state.m1.forEach(i => {
+            reportData.push([i.name, i.qty, i.price, (i.qty * i.price)]);
+        });
+        reportData.push(["M1 Avg Cost", "", "", document.getElementById('m1-avg').innerText]);
+        reportData.push([]);
+
+        // Machine 2
+        reportData.push(["MACHINE 2 MATERIALS"]);
+        reportData.push(["Material", "Quantity (kg)", "Rate (₹)", "Subtotal"]);
+        state.m2.forEach(i => {
+            reportData.push([i.name, i.qty, i.price, (i.qty * i.price)]);
+        });
+        reportData.push(["M2 Avg Cost", "", "", document.getElementById('m2-avg').innerText]);
+        reportData.push([]);
+
+        // Final Result
+        reportData.push(["BLENDING SUMMARY"]);
+        reportData.push(["M1 Ratio Parts", document.getElementById('r1').value]);
+        reportData.push(["M2 Ratio Parts", document.getElementById('r2').value]);
+        reportData.push(["FINAL BLENDED COST", document.getElementById('final-price').innerText]);
+
+        const ws = XLSX.utils.aoa_to_sheet(reportData);
+        const wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, "Calculation");
+        XLSX.writeFile(wb, "Cost_Calculation_Report.xlsx");
+    }
+
     function saveToGoogleForm() {
         const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSevZiMDB-TZ12VprOh0QP-nRsbIhqdiKdIeS6x94-2QqBZKMw/formResponse";
         const entry_m1 = "entry.1043991863"; 
@@ -301,18 +338,18 @@
             mode: 'no-cors',
             body: formData
         }).then(() => {
-            alert("✅ SUCCESSFULLY LOGGED!\nData has been sent to your Google Sheet.");
+            alert("✅ SUCCESSFULLY LOGGED!");
         }).catch(() => {
             alert("❌ Connection Error.");
         });
     }
 
     function resetAll() {
-        if(confirm('Clear all data and start over?')) {
+        if(confirm('Clear all data?')) {
             localStorage.removeItem('savedState');
             state = JSON.parse(JSON.stringify(defaultData));
-            document.getElementById('r1').value = 0;
-            document.getElementById('r2').value = 0;
+            document.getElementById('r1').value = 5;
+            document.getElementById('r2').value = 1;
             render();
         }
     }
