--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
     }
 
     render();
+    if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js');
+}
 </script>
 
 </body>
