--- a/index.html
+++ b/index.html
@@ -1,21 +1,283 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Cost Calculator</title>
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="CostApp">
-    
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2454/2454282.png">
-    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/2454/2454282.png">
-    
-    <link rel="manifest" href="/manifest.json">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Cost Price Calculator</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <style>
+        :root {
+            --bg-dark: #0f172a;
+            --card-bg: #1e293b;
+            --border: #334155;
+            --primary: #38bdf8;
+            --success: #10b981;
+            --excel-blue: #1d6f42;
+            --text-main: #f1f5f9;
+            --text-dim: #94a3b8;
+        }
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+        body {
+            font-family: -apple-system, system-ui, sans-serif;
+            background-color: var(--bg-dark);
+            color: var(--text-main);
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 
-    <style>
-        /* ... keep your existing CSS styles here ... */
-    </style>
+        .container { width: 100%; max-width: 900px; }
+
+        header { text-align: center; margin-bottom: 30px; }
+        header h1 { margin: 0; color: var(--primary); font-size: 1.8rem; }
+
+        .machine-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 20px;
+            margin-bottom: 25px;
+        }
+
+        .card {
+            background: var(--card-bg);
+            border: 1px solid var(--border);
+            border-radius: 12px;
+            padding: 20px;
+        }
+
+        .card h2 { font-size: 1.2rem; margin-top: 0; border-bottom: 1px solid var(--border); padding-bottom: 10px; margin-bottom: 15px; }
+
+        .row { display: grid; grid-template-columns: 2fr 1fr 1.2fr 40px; gap: 8px; margin-bottom: 12px; }
+        
+        input {
+            background: #0f172a;
+            border: 1px solid var(--border);
+            color: white;
+            padding: 10px;
+            border-radius: 8px;
+            font-size: 16px; /* Prevents iOS auto-zoom */
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .btn-add {
+            width: 100%;
+            background: rgba(56, 189, 248, 0.1);
+            color: var(--primary);
+            border: 1px dashed var(--primary);
+            padding: 10px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+        }
+
+        .btn-del {
+            background: transparent;
+            border: none;
+            color: #ef4444;
+            font-size: 1.4rem;
+            cursor: pointer;
+        }
+
+        .stat-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+
+        .stat-item { background: rgba(0,0,0,0.2); padding: 12px; border-radius: 8px; border-left: 4px solid var(--primary); }
+        .stat-label { font-size: 0.8rem; color: var(--text-dim); }
+        .stat-value { font-size: 1.2rem; font-weight: bold; }
+
+        .final-result {
+            background: rgba(16, 185, 129, 0.1);
+            border: 1px solid var(--success);
+            padding: 25px;
+            text-align: center;
+            border-radius: 12px;
+            margin-top: 25px;
+        }
+
+        .final-result h2 { color: var(--success); font-size: 3rem; margin: 10px 0; }
+
+        .toolbar {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            justify-content: center;
+            margin-top: 40px;
+        }
+
+        .btn-tool {
+            padding: 12px 24px;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .btn-success { background: var(--success); color: #fff; }
+        .btn-excel { background: var(--excel-blue); color: #fff; }
+        .btn-ghost { background: transparent; color: var(--text-dim); border: 1px solid var(--border); }
+    </style>
 </head>
+<body>
+
+<div class="container">
+    <header>
+        <h1>⚙️ Cost Calculator</h1>
+    </header>
+
+    <div class="machine-grid">
+        <div class="card">
+            <h2>🔧 Machine 1</h2>
+            <div id="m1-container"></div>
+            <button class="btn-add" onclick="addItem('m1')">+ Add Material</button>
+        </div>
+
+        <div class="card">
+            <h2>🔧 Machine 2</h2>
+            <div id="m2-container"></div>
+            <button class="btn-add" onclick="addItem('m2')">+ Add Material</button>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="stat-grid">
+            <div class="stat-item">
+                <div class="stat-label">Machine 1 Avg</div>
+                <div class="stat-value" id="m1-avg">₹0.00</div>
+            </div>
+            <div class="stat-item" style="border-left-color: var(--success)">
+                <div class="stat-label">Machine 2 Avg</div>
+                <div class="stat-value" id="m2-avg">₹0.00</div>
+            </div>
+        </div>
+
+        <div style="background: rgba(56, 189, 248, 0.05); padding: 15px; border-radius: 10px; border: 1px solid var(--border);">
+            <p style="margin: 0 0 10px 0; font-weight: bold;">🎯 Ratio Configuration</p>
+            <div style="display: flex; gap: 20px;">
+                <div style="flex: 1">
+                    <label style="font-size: 0.8rem;">M1 Parts</label>
+                    <input type="number" id="r1" value="5" oninput="calculate()">
+                </div>
+                <div style="flex: 1">
+                    <label style="font-size: 0.8rem;">M2 Parts</label>
+                    <input type="number" id="r2" value="1" oninput="calculate()">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="final-result">
+        <span style="text-transform: uppercase; font-size: 0.8rem; letter-spacing: 1px;">Final Blended Cost</span>
+        <h2 id="final-price">₹0.00</h2>
+    </div>
+
+    <div class="toolbar">
+        <button class="btn-tool btn-ghost" onclick="resetAll()">🔄 Reset</button>
+        <button class="btn-tool btn-excel" onclick="exportToExcel()">📊 Excel</button>
+        <button class="btn-tool btn-success" onclick="saveToGoogleForm()">💾 SAVE TODAY</button>
+    </div>
+</div>
+
+<script>
+    const defaultData = {
+        m1: [{ name: '', qty: 0, price: 0 }],
+        m2: [{ name: '', qty: 0, price: 0 }]
+    };
+
+    let state = JSON.parse(localStorage.getItem('savedState')) || JSON.parse(JSON.stringify(defaultData));
+
+    function render() {
+        ['m1', 'm2'].forEach(key => {
+            const container = document.getElementById(`${key}-container`);
+            container.innerHTML = '';
+            state[key].forEach((item, index) => {
+                const row = document.createElement('div');
+                row.className = 'row';
+                row.innerHTML = `
+                    <input type="text" placeholder="Mat" value="${item.name}" oninput="updateItem('${key}', ${index}, 'name', this.value)">
+                    <input type="number" placeholder="kg" value="${item.qty || ''}" oninput="updateItem('${key}', ${index}, 'qty', this.value)">
+                    <input type="number" placeholder="Rate" value="${item.price || ''}" oninput="updateItem('${key}', ${index}, 'price', this.value)">
+                    <button class="btn-del" onclick="removeItem('${key}', ${index})">×</button>
+                `;
+                container.appendChild(row);
+            });
+        });
+        calculate();
+    }
+
+    function updateItem(mKey, index, field, value) {
+        state[mKey][index][field] = field === 'name' ? value : parseFloat(value) || 0;
+        localStorage.setItem('savedState', JSON.stringify(state));
+        calculate();
+    }
+
+    function addItem(mKey) {
+        state[mKey].push({ name: '', qty: 0, price: 0 });
+        render();
+    }
+
+    function removeItem(mKey, index) {
+        state[mKey].splice(index, 1);
+        if(state[mKey].length === 0) state[mKey] = [{ name: '', qty: 0, price: 0 }];
+        render();
+    }
+
+    function calculate() {
+        const getAvg = (list) => {
+            let totalW = 0, totalC = 0;
+            list.forEach(i => { totalW += i.qty; totalC += (i.qty * i.price); });
+            return totalW ? totalC / totalW : 0;
+        };
+        const avg1 = getAvg(state.m1);
+        const avg2 = getAvg(state.m2);
+        document.getElementById('m1-avg').innerText = `₹${avg1.toFixed(2)}`;
+        document.getElementById('m2-avg').innerText = `₹${avg2.toFixed(2)}`;
+        const r1 = parseFloat(document.getElementById('r1').value) || 0;
+        const r2 = parseFloat(document.getElementById('r2').value) || 0;
+        const final = (r1 + r2) > 0 ? ((avg1 * r1) + (avg2 * r2)) / (r1 + r2) : 0;
+        document.getElementById('final-price').innerText = `₹${final.toFixed(2)}`;
+    }
+
+    function saveToGoogleForm() {
+        const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSevZiMDB-TZ12VprOh0QP-nRsbIhqdiKdIeS6x94-2QqBZKMw/formResponse";
+        const formData = new FormData();
+        formData.append("entry.1043991863", document.getElementById('m1-avg').innerText);
+        formData.append("entry.1763710978", document.getElementById('m2-avg').innerText);
+        formData.append("entry.482957280", document.getElementById('final-price').innerText);
+
+        fetch(FORM_URL, { method: 'POST', mode: 'no-cors', body: formData })
+        .then(() => alert("✅ Saved to Google Sheet!"))
+        .catch(() => alert("❌ Save Error"));
+    }
+
+    function exportToExcel() {
+        const data = [["Costing Report", new Date().toLocaleString()], []];
+        data.push(["Machine 1 Avg", document.getElementById('m1-avg').innerText]);
+        data.push(["Machine 2 Avg", document.getElementById('m2-avg').innerText]);
+        data.push(["Final Price", document.getElementById('final-price').innerText]);
+        const ws = XLSX.utils.aoa_to_sheet(data);
+        const wb = XLSX.utils.book_new();
+        XLSX.utils.book_append_sheet(wb, ws, "Sheet1");
+        XLSX.writeFile(wb, "CostReport.xlsx");
+    }
+
+    function resetAll() {
+        if(confirm('Reset all?')) {
+            localStorage.clear();
+            location.reload();
+        }
+    }
+
+    render();
+</script>
+</body>
+</html>
