--- a/index.html
+++ b/index.html
@@ -336,39 +336,35 @@
 </div>
 
 <script>
-    // PWA Service Worker Registration
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-            navigator.serviceWorker.register('/sw.js')
-                .then(reg => console.log('SW registered'))
-                .catch(err => console.log('SW registration failed'));
-        });
-    }
-
-    // PWA Install handling
-    let deferredPrompt;
-    window.addEventListener('beforeinstallprompt', (e) => {
-        e.preventDefault();
-        deferredPrompt = e;
-        setTimeout(() => document.getElementById('installPrompt').classList.add('show'), 2000);
+    // PWA - FORCE WORKING INSTALL PROMPT
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/sw.js', { scope: '/' }).then(reg => {
+        console.log('✅ PWA Active');
+        setTimeout(() => {
+            if ('beforeinstallprompt' in window) {
+                window.dispatchEvent(new CustomEvent('beforeinstallprompt'));
+            }
+        }, 2000);
     });
+}
 
-    function installApp() {
-        if (deferredPrompt) {
-            deferredPrompt.prompt();
-            deferredPrompt.userChoice.then(() => deferredPrompt = null);
-        }
-        dismissInstall();
-    }
+let deferredPrompt;
+window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+    document.getElementById('installPrompt').classList.add('show');
+});
 
-    function dismissInstall() {
-        document.getElementById('installPrompt').classList.remove('show');
-    }
+function installApp() {
+    deferredPrompt?.prompt();
+    deferredPrompt = null;
+    document.getElementById('installPrompt').classList.remove('show');
+}
 
-    window.addEventListener('appinstalled', () => {
-        deferredPrompt = null;
-        dismissInstall();
-    });
+function dismissInstall() {
+    document.getElementById('installPrompt').classList.remove('show');
+}
+
 
     // App State & Logic
     const defaultData = {
